<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsaem_bringup</name>
  <version>0.0.2</version>
  <description>
    ROS 2 launch scripts for the R-Saem Node
  </description>
  <maintainer email="jetsonai@jetsonai.co.kr">R-Saem</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://jetsonai.co.kr</url>
  <url type="repository">https://github.com/jetsonai/rsaem_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rsaem_description</exec_depend>
  <exec_depend>rsaem_node</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
