<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rsaem_node</name>
  <version>0.0.2</version>
  <description>
    ROS 2 launch scripts for the R-Saem Node
  </description>
  <maintainer email="jetsonai@jetsonai.co.kr">R-Saem</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://jetsonai.co.kr</url>
  <url type="repository">https://github.com/jetsonai/rsaem_ros2</url>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <build_depend>rsaem_msgctl</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
